@@ -42,7 +42,6 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class ModElementCodeViewer<T extends GeneratableElement> extends JTabbedPane
 		implements MouseListener, KeyListener, ActionListener, ChangeListener, DocumentListener {
@@ -134,13 +133,12 @@ public class ModElementCodeViewer<T extends GeneratableElement> extends JTabbedP
 						}
 					}
 
-					for (File file : cache.keySet()) {
-						if (!files.stream().map(GeneratorFile::file).collect(Collectors.toList())
-								.contains(file)) { // deleted file
+					cache.keySet().stream().toList().forEach(file -> {
+						if (!files.stream().map(GeneratorFile::file).toList().contains(file)) { // deleted file
 							remove(cache.get(file));
 							cache.remove(file);
 						}
-					}
+					});
 					setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
 				} catch (Exception ignored) {
 					setBackground(new Color(0x8D5C5C));
